# GalacticAttackers

./: .gitignore  README.md
Example Shape Game/: CMakeLists.txt  DebugPS.hlsl  DebugVS.cso  DebugVS.hlsl  HOW TO BUILD.txt  components.h  entities.h  main.cpp  precompiled.h  systems.h
Example Shape Game/Assets/Blender Levels/: StartingScreen.blend  TemplateLvl.blend
Example Shape Game/gateware-main/documentation/html/: _g_audio_8h_source.html  _g_blitter_8h_source.html  _g_collision2_d_8h_source.html  _g_collision_8h_source.html  _g_concurrent_8h_source.html  _g_controller_8h_source.html  _g_core_defines_8h_source.html  _g_daemon_8h_source.html  _g_direct_x12_surface_8h_source.html  _g_event_cache_8h_source.html  _g_event_queue_8h_source.html  _g_event_responder_8h_source.html  _g_graphics_defines_8h_source.html  _g_input_defines_8h_source.html  _g_logic_8h_source.html  _g_matrix2_d_8h_source.html  _g_matrix_8h_source.html  _g_music3_d_8h_source.html  _g_music_8h_source.html  _g_open_g_l_surface_8h_source.html  _g_quaternion_8h_source.html  _g_raster_surface_8h_source.html  _g_sound_8h_source.html  _g_thread_shared_8h_source.html  _g_window_8h_source.html  class_g_w_1_1_a_u_d_i_o_1_1_g_audio-members.html  class_g_w_1_1_a_u_d_i_o_1_1_g_audio.html  class_g_w_1_1_a_u_d_i_o_1_1_g_audio3_d-members.html  class_g_w_1_1_a_u_d_i_o_1_1_g_music-members.html  class_g_w_1_1_a_u_d_i_o_1_1_g_music.html  class_g_w_1_1_a_u_d_i_o_1_1_g_music3_d.html  class_g_w_1_1_a_u_d_i_o_1_1_g_sound-members.html  class_g_w_1_1_a_u_d_i_o_1_1_g_sound.html  class_g_w_1_1_a_u_d_i_o_1_1_g_sound3_d-members.html  class_g_w_1_1_a_u_d_i_o_1_1_g_sound3_d.html  class_g_w_1_1_c_o_r_e_1_1_g_event_cache-members.html  class_g_w_1_1_c_o_r_e_1_1_g_event_cache.html  class_g_w_1_1_c_o_r_e_1_1_g_event_generator-members.html  class_g_w_1_1_c_o_r_e_1_1_g_event_generator.html  class_g_w_1_1_c_o_r_e_1_1_g_event_queue-members.html  (+173 more)
Example Space Game/: CMakeLists.txt  GameLevel_1.txt  GameLevel_2.txt  GameLevel_3.txt  Level2.blend  Level2.blend1  Level3.blend  Level3.blend1  LevelExporter.py  StartingScreen.blend  StartingScreen.blend1  StartingScreen.txt  TemplateLvl.blend  TemplateLvl.blend1  defaults.ini  saved.ini
Example Space Game/DDS/: Center_top.dds  HUD_Sharp_backplate.dds  Health_right.dds  Mana_right.dds  Stamina_backplate.dds  uipack_rpg_sheet.dds
Example Space Game/Models/: 1Plane.h  1Plane.mtl  2Plane.h  2Plane.mtl  ChickenCoop_Cube.h  ChickenCoop_Cube.h2b  ChickenCoop_Cube.mtl  Chicken_Blob_Cube.h  Chicken_Blob_Cube.h2b  Chicken_Blob_Cube.mtl  Circle.h2b  Circle.mtl  Crystal1.h2b  Crystal1.mtl  Crystal3.h2b  Crystal3.mtl  Cube.h  Cube.h2b  Cube.mtl  Cube_Exclamation_Cube.h2b  Cube_Exclamation_Cube.mtl  Cube_Grass_Single.h  Cube_Grass_Single.h2b  Cube_Grass_Single.mtl  Cube_Question_Cube.h2b  Cube_Question_Cube.mtl  Dog_Blob_Cube.h  Dog_Blob_Cube.h2b  Dog_Blob_Cube.mtl  Fence_Middle_Cube.h2b  Fence_Middle_Cube.mtl  Life.h  Moon1.h  Moon1.h2b  OpenBarn_Cube.h2b  OpenBarn_Cube.mtl  Pigeon_Blob_Eyes_Cube.h  Pigeon_Blob_Eyes_Cube.h2b  Pigeon_Blob_Eyes_Cube.mtl  Plane.h2b  (+89 more)
Example Space Game/Shaders/: Color2DInstancedPS.hlsl  Color2DInstancedVS.hlsl  PixelShader.hlsl
Example Space Game/Source/: Application.cpp  Application.h  FileIntoString.h  GameConfig.cpp  Main.cpp  Precompiled.h  load_data_oriented.h
Example Space Game/Source/Components/: Components.h  Gameplay.h  Identification.h  Physics.h  Visuals.h
Example Space Game/Source/Entities/: BulletData.cpp  BulletData.h  EnemyData.cpp  EnemyData.h  PlayerData.cpp  PlayerData.h  Prefabs.cpp  Prefabs.h  ShieldData.cpp  ShieldData.h
Example Space Game/Source/Events/: Playevents.h
Example Space Game/Source/HUD/: Font.h  Sprite.h
Example Space Game/Source/Systems/: BulletLogic.cpp  BulletLogic.h  EnemyLogic.cpp  EnemyLogic.h  LevelLogic.cpp  LevelLogic.h  PhysicsLogic.cpp  PhysicsLogic.h  PlayerLogic.cpp  PlayerLogic.h  RendererLogic.cpp  RendererLogic.h  ShieldLogic.cpp  ShieldLogic.h  VulkanRendererLogic.cpp  VulkanRendererLogic.h
Example Space Game/Source/directxtk11/lib/: directxtk11 - Shortcut.lnk
Example Space Game/Source/xml/: font_consolas_32.xml
Example Space Game/blender/: StartingScreen.blend  StartingScreen.txt  swaplevel.blend1
Example Space Game/blender/Models/: Life.h2b  Life.mtl  Player.mtl  Space Normal.h2b  Space Tank.h2b  Space Tank.mtl  Space fast.mtl  Spaceship2.mtl  Spaceship4.mtl  Spaceship5.mtl  Torus.mtl
Example Space Game/gateware-main/: Gateware.h  version.txt
Example Space Game/gateware-main/documentation/html/: _g_audio3_d_8h_source.html  _g_audio_defines_8h_source.html  _g_buffered_input_8h_source.html  _g_direct_x11_surface_8h_source.html  _g_event_generator_8h_source.html  _g_event_receiver_8h_source.html  _g_file_8h_source.html  _g_input_8h_source.html  _g_interface_8h_source.html  _g_log_8h_source.html  _g_math2_d_defines_8h_source.html  _g_math_defines_8h_source.html  _g_sound3_d_8h_source.html  _g_system_defines_8h_source.html  _g_vector2_d_8h_source.html  _g_vector_8h_source.html  _g_vulkan_surface_8h_source.html  annotated.html  class_g_w_1_1_a_u_d_i_o_1_1_g_audio3_d.html  class_g_w_1_1_a_u_d_i_o_1_1_g_music3_d-members.html  class_g_w_1_1_c_o_r_e_1_1_g_event_queue.html  class_g_w_1_1_c_o_r_e_1_1_g_event_receiver-members.html  class_g_w_1_1_c_o_r_e_1_1_g_event_responder.html  class_g_w_1_1_c_o_r_e_1_1_g_interface.html  class_g_w_1_1_c_o_r_e_1_1_g_thread_shared-members.html  class_g_w_1_1_c_o_r_e_1_1_g_thread_shared.html  class_g_w_1_1_g_r_a_p_h_i_c_s_1_1_g_direct_x12_surface.html  class_g_w_1_1_g_r_a_p_h_i_c_s_1_1_g_open_g_l_surface-members.html  class_g_w_1_1_g_r_a_p_h_i_c_s_1_1_g_raster_surface.html  class_g_w_1_1_i_n_p_u_t_1_1_g_buffered_input.html  class_g_w_1_1_i_n_p_u_t_1_1_g_controller-members.html  (+67 more)
(+119 files in other folders)
